--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "homepage": "https://github.com/Chad1281/employee-directory"
+    "homepage": "https://chad1281.github.io/employee-directory/"
   },
   "eslintConfig": {
     "extends": [
