--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "employee-directory",
+  "homepage": "https://chad1281.github.io/employee-directory/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -17,12 +18,14 @@
     "web-vitals": "^1.1.0"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "homepage": "https://chad1281.github.io/employee-directory/"
+    "eject": "react-scripts eject"    
   },
+  
   "eslintConfig": {
     "extends": [
       "react-app",
@@ -41,4 +44,5 @@
       "last 1 safari version"
     ]
   }
+  
 }
